--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="main-page-image">
-        <img src="/Images/main recipe image.jpg" alt="recipe logo">
+        <img src="Images/main recipe image.jpg" alt="recipe logo">
     </div>
     
     <div class="unord-recipe-list">
