--- a/recipes/chicken tikka masala.html
+++ b/recipes/chicken tikka masala.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>CHICKEN TIKKA MASALA</h1>
-    <img src="/Images/ctm.jpg" alt="">
+    <img src="Images/ctm.jpg" alt="">
     <h3>Chicken tikka masala made easy with this great-tasting recipe.</h3>
     <p>Simply marinate chicken breast in yogurt and spices and then simmer in a tomato cream sauce.</p> 
     <p>Serve with rice or warm pita bread.</p>
