--- a/recipes/chicken makhani.html
+++ b/recipes/chicken makhani.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>CHICKEN MAKHANI</h1>
-    <img src="./Images/cm.jpeg" alt="">
+    <img src="Images/cm.jpg" alt="">
     <h3>Chiken Makhani is also known as Indian Butter Chicken masala is a semi gravy.</h3>
     <p>This butter chicken recipe, or chicken makhani, is one of my favorite Indian dishes.</p> 
     <p>It features a full-flavored sauce that complements the chicken well. It can be made as mild or spicy as you wish by adjusting the cayenne. </p>
