--- a/recipes/naan.html
+++ b/recipes/naan.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>NAAN</h1>
-    <img src="/images/naan.jpg" alt="">
+    <img src="images/naan.jpg" alt="naan img">
     <h3>This homemade naan recipe makes soft, chewy naan with a buttery taste.</h3>
     <p>It is the best I have tasted outside of an Indian restaurant. </p> 
     <p>Simply delicious eaten warm brushed with melted butter or served with your favorite curry.</p>
